--- a/privacy.html
+++ b/privacy.html
@@ -45,7 +45,7 @@
 
     <h2>6. Contact Us</h2>
     <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-    <p><strong>Email:</strong> <a href="mailto:czarul@163.com" style="color:#D32F2F">yourname@gmail.com</a></p>
+    <p><strong>Email:</strong> <a href="mailto:czarul@163.com" style="color:#D32F2F">czarul@163.com</a></p>
 </div>
 
 <div class="footer">
