--- a/index.html
+++ b/index.html
@@ -2,40 +2,214 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChinaStart - App Support</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <title>ChinaStart - Official Support & Help Center</title>
     <style>
-        body { font-family: -apple-system, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; color: #333; background: #f9f9f9; }
-        .container { background: white; padding: 40px; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
-        h1 { color: #D32F2F; border-bottom: 2px solid #eee; padding-bottom: 10px; }
-        h2 { margin-top: 30px; font-size: 1.2em; color: #444; }
-        .btn { display: inline-block; background: #D32F2F; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px; font-weight: bold; margin-top: 10px; }
-        a { color: #D32F2F; }
-        .footer { margin-top: 40px; text-align: center; color: #888; font-size: 0.9em; }
+        /* --- 定义颜色变量 --- */
+        :root {
+            --primary-color: #D32F2F; /* 中国红 */
+            --primary-hover: #B71C1C;
+            --text-dark: #1A1A1A;
+            --text-medium: #555555;
+            --text-light: #888888;
+            --bg-body: #F5F7FA; /* 柔和的灰背景 */
+            --bg-card: #FFFFFF;
+        }
+
+        /* --- 全局设置 --- */
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.7;
+            color: var(--text-dark);
+            background-color: var(--bg-body);
+            margin: 0;
+            padding: 0;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        /* --- 顶部 Hero 区域 --- */
+        .hero-header {
+            background-color: var(--bg-card);
+            text-align: center;
+            padding: 60px 20px 80px; /* 底部留出空间给卡片重叠 */
+            border-bottom: 1px solid #EAEAEA;
+        }
+
+        .app-title {
+            margin: 0;
+            font-size: 2.8rem;
+            font-weight: 800;
+            letter-spacing: -0.5px;
+            background: linear-gradient(45deg, var(--text-dark), var(--primary-color));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .app-subtitle {
+            margin-top: 10px;
+            font-size: 1.2rem;
+            color: var(--text-medium);
+            font-weight: 400;
+        }
+
+        /* --- 主体卡片容器 --- */
+        .main-container {
+            max-width: 720px;
+            margin: -50px auto 40px; /* 向上负边距，形成重叠效果 */
+            background: var(--bg-card);
+            padding: 50px;
+            border-radius: 20px;
+            box-shadow: 0 15px 35px rgba(0,0,0,0.08);
+            position: relative;
+        }
+
+        /* --- 标题样式 --- */
+        h2 {
+            font-size: 1.5rem;
+            color: var(--text-dark);
+            margin-top: 40px;
+            margin-bottom: 25px;
+            padding-bottom: 10px;
+            border-bottom: 2px solid #F0F0F0;
+            position: relative;
+        }
+        /* 标题下的小红条装饰 */
+        h2::after {
+            content: '';
+            position: absolute;
+            bottom: -2px;
+            left: 0;
+            width: 50px;
+            height: 2px;
+            background-color: var(--primary-color);
+        }
+
+        /* --- FAQ 样式优化 --- */
+        .faq-item {
+            margin-bottom: 25px;
+            border-left: 3px solid #eee;
+            padding-left: 20px;
+        }
+
+        .question {
+            font-weight: 700;
+            font-size: 1.1rem;
+            color: var(--primary-color);
+            margin-bottom: 8px;
+        }
+
+        .answer {
+            color: var(--text-medium);
+        }
+
+        /* --- 按钮样式 --- */
+        .btn-primary {
+            display: inline-block;
+            background-color: var(--primary-color);
+            color: white;
+            padding: 15px 35px;
+            text-decoration: none;
+            border-radius: 50px; /* 圆角胶囊形状 */
+            font-weight: 700;
+            font-size: 1.1rem;
+            margin-top: 15px;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(211, 47, 47, 0.3);
+        }
+
+        .btn-primary:hover {
+            background-color: var(--primary-hover);
+            transform: translateY(-2px); /* 鼠标悬停上浮 */
+            box-shadow: 0 8px 20px rgba(211, 47, 47, 0.4);
+        }
+
+        /* --- 链接样式 --- */
+        a.link {
+            color: var(--primary-color);
+            text-decoration: none;
+            font-weight: 600;
+            border-bottom: 1px dotted var(--primary-color);
+        }
+        a.link:hover {
+            border-bottom-style: solid;
+        }
+
+        /* --- 页脚 --- */
+        .footer {
+            text-align: center;
+            padding: 40px 20px;
+            color: var(--text-light);
+            font-size: 0.9em;
+        }
+
+        /* --- 移动端适配 --- */
+        @media (max-width: 600px) {
+            .hero-header { padding: 40px 20px 70px; }
+            .app-title { font-size: 2.2rem; }
+            .main-container { 
+                margin: -40px 20px 30px; 
+                padding: 30px 25px;
+                border-radius: 16px;
+            }
+            .btn-primary { width: 100%; text-align: center; box-sizing: border-box; }
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>ChinaStart Support</h1>
-        <p>Welcome to the official support page for ChinaStart: Offline Survival Guide.</p>
 
-        <h2>Frequently Asked Questions</h2>
-        <p><strong>Q: No sound in translation?</strong><br>
-        A: Please check if your iPhone is in Silent Mode (side switch). Turn up the media volume.</p>
-        
-        <p><strong>Q: Do maps work offline?</strong><br>
-        A: Yes, all maps are stored locally on your device.</p>
+    <header class="hero-header">
+        <h1 class="app-title">ChinaStart Support</h1>
+        <p class="app-subtitle">Your offline survival guide for traveling in China.</p>
+    </header>
 
-        <h2>Contact Us</h2>
-        <p>Have bugs or suggestions? Email us at:</p>
-        <a href="mailto:czarul@163.com" class="btn">Email Support</a>
+    <main class="main-container">
+        <section>
+            <p style="font-size: 1.1rem; color: var(--text-medium);">
+                Welcome to the official help center. Here you can find answers to common questions, check our privacy policy, or get in touch with our team.
+            </p>
+        </section>
 
-        <h2>Privacy Policy</h2>
-        <p><a href="https://www.privacypolicygenerator.info/live.php?token=REPLACE_WITH_YOUR_LINK">View Privacy Policy</a></p>
-    </div>
+        <section>
+            <h2>Frequently Asked Questions</h2>
+            
+            <div class="faq-item">
+                <div class="question">Why can't I hear the translation voice?</div>
+                <div class="answer">Please verify that your phone is not in <strong>Silent Mode</strong>. On iPhones, check the physical switch on the side of your device. The app uses the system volume, so please turn it up.</div>
+            </div>
 
-    <div class="footer">
-        &copy; 2025 ChinaStart. All rights reserved.
-    </div>
+            <div class="faq-item">
+                <div class="question">Do the maps work without internet?</div>
+                <div class="answer">Yes, absolutely. All metro maps are downloaded once and stored locally on your device for complete offline access.</div>
+            </div>
+
+            <div class="faq-item">
+                <div class="question">Is my personal data safe?</div>
+                <div class="answer">Your privacy is our priority. ChinaStart is an <strong>offline-first</strong> app. We do not collect, store, or upload your location history or personal usage data.</div>
+            </div>
+        </section>
+
+        <section>
+            <h2>Contact Us</h2>
+            <p style="color: var(--text-medium);">
+                Encountered a bug or have a feature request? We'd love to hear from you. We typically respond within 24 hours.
+            </p>
+            <a href="mailto:czarul@163.com class="btn-primary">👉 Email Support Team</a>
+        </section>
+
+        <section>
+            <h2>Privacy & Terms</h2>
+            <p style="color: var(--text-medium);">
+                We believe in transparency. Review our full privacy policy to understand how we protect your data.
+            </p>
+            <p>
+                <a href="https://qwynnx6mkf-a11y.github.io/chinastart-support/privacy.html" class="link" target="_blank">View Privacy Policy &nearr;</a>
+            </p>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <p>&copy; 2025 ChinaStart. Designed for offline survival.</p>
+    </footer>
+
 </body>
 </html>
