--- a/support.html
+++ b/support.html
@@ -142,7 +142,7 @@
             </p>
             
             <!-- 🔥 修改这里：换成你的邮箱 -->
-            <a href="mailto:support@yourdomain.com" class="contact-btn">
+            <a href="mailto:czarul@163.com" class="contact-btn">
                 Email Support
             </a>
         </div>
