--- a/support.html
+++ b/support.html
@@ -3,29 +3,199 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Voice Shadow: Real-time Vocal Visualizer & Pitch Training App. Cyberpunk style, 100% Offline. Download for iOS.">
-    <title>Voice Shadow - Vocal Visualizer</title>
+    <meta name="description" content="Voice Shadow: Real-time Vocal Visualizer. Developed by SichuanPanda_Dev.">
+    <title>Voice Shadow | Protocol Online</title>
     <style>
-        body { margin: 0; background: #050505; color: #fff; font-family: sans-serif; text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; background-image: radial-gradient(circle at 50% 50%, #003333 0%, #000 70%); }
-        .logo { width: 120px; height: 120px; background: linear-gradient(135deg, #00E5FF, #FFD700); border-radius: 24px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center; font-size: 60px; font-weight: bold; color: #000; box-shadow: 0 0 50px rgba(0, 229, 255, 0.4); }
-        h1 { font-size: 2.5rem; margin: 0; letter-spacing: 2px; }
-        p { color: #888; margin: 20px 0 40px; max-width: 500px; line-height: 1.6; }
-        .btn { display: inline-block; padding: 15px 40px; background: #00E5FF; color: #000; text-decoration: none; font-weight: bold; border-radius: 30px; font-size: 1.2rem; transition: transform 0.2s; }
-        .btn:hover { transform: scale(1.05); box-shadow: 0 0 30px rgba(0, 229, 255, 0.6); }
-        .screenshots { display: flex; gap: 10px; margin-top: 40px; overflow-x: auto; padding: 10px; }
-        .shot { width: 100px; height: 180px; background: #222; border-radius: 10px; border: 1px solid #333; }
+        :root {
+            --bg-color: #050505;
+            --neon-cyan: #00E5FF;
+            --neon-gold: #FFD700;
+            --text-color: #E0E0E0;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            font-family: 'Courier New', Courier, monospace;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            position: relative;
+        }
+
+        /* 背景网格动画 */
+        .grid-bg {
+            position: absolute;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background-image: 
+                linear-gradient(rgba(0, 229, 255, 0.1) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(0, 229, 255, 0.1) 1px, transparent 1px);
+            background-size: 40px 40px;
+            perspective: 500px;
+            transform: scale(1.2);
+            z-index: -2;
+            animation: moveGrid 20s linear infinite;
+        }
+
+        /* 扫描线效果 */
+        .scanline {
+            position: absolute;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: linear-gradient(to bottom, transparent 50%, rgba(0,0,0,0.5) 51%);
+            background-size: 100% 4px;
+            pointer-events: none;
+            z-index: -1;
+        }
+
+        @keyframes moveGrid {
+            0% { transform: perspective(500px) rotateX(10deg) translateY(0); }
+            100% { transform: perspective(500px) rotateX(10deg) translateY(40px); }
+        }
+
+        .container {
+            text-align: center;
+            z-index: 1;
+            padding: 20px;
+            border: 1px solid rgba(0, 229, 255, 0.2);
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(5px);
+            box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
+            border-radius: 12px;
+            max-width: 500px;
+        }
+
+        .logo-box {
+            width: 80px;
+            height: 80px;
+            margin: 0 auto 20px;
+            border-radius: 20px;
+            background: linear-gradient(135deg, var(--neon-cyan), var(--neon-gold));
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 40px;
+            font-weight: 900;
+            color: #000;
+            box-shadow: 0 0 30px var(--neon-cyan);
+            animation: pulse 3s infinite;
+        }
+
+        @keyframes pulse {
+            0% { box-shadow: 0 0 20px var(--neon-cyan); }
+            50% { box-shadow: 0 0 40px var(--neon-cyan), 0 0 10px var(--neon-gold); }
+            100% { box-shadow: 0 0 20px var(--neon-cyan); }
+        }
+
+        h1 {
+            font-size: 2rem;
+            margin: 0;
+            letter-spacing: 4px;
+            text-transform: uppercase;
+            text-shadow: 2px 2px 0px #000;
+        }
+
+        .tagline {
+            color: var(--neon-cyan);
+            font-size: 0.9rem;
+            margin: 10px 0 30px;
+            letter-spacing: 1px;
+        }
+
+        .btn-download {
+            display: block;
+            width: 220px;
+            margin: 0 auto;
+            padding: 16px 0;
+            background: transparent;
+            color: var(--neon-cyan);
+            border: 2px solid var(--neon-cyan);
+            font-weight: bold;
+            text-decoration: none;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            transition: all 0.3s;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .btn-download:hover {
+            background: var(--neon-cyan);
+            color: #000;
+            box-shadow: 0 0 30px var(--neon-cyan);
+        }
+
+        .dev-badge {
+            margin-top: 40px;
+            font-size: 0.75rem;
+            color: #666;
+            border-top: 1px solid #333;
+            padding-top: 15px;
+        }
+
+        .dev-name {
+            color: var(--neon-gold);
+            font-weight: bold;
+        }
+
+        .status-dot {
+            height: 8px;
+            width: 8px;
+            background-color: #0f0;
+            border-radius: 50%;
+            display: inline-block;
+            margin-right: 5px;
+            box-shadow: 0 0 5px #0f0;
+        }
+
+        /* 简单的打字机效果 */
+        .typing {
+            overflow: hidden;
+            white-space: nowrap;
+            margin: 0 auto;
+            border-right: 2px solid var(--neon-cyan);
+            animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
+        }
+
+        @keyframes typing { from { width: 0 } to { width: 100% } }
+        @keyframes blink-caret { from, to { border-color: transparent } 50% { border-color: var(--neon-cyan); } }
+
     </style>
 </head>
 <body>
-    <div class="logo">V</div>
-    <h1>VOICE SHADOW</h1>
-    <p>Professional real-time bio-acoustic analysis terminal. <br>Train your pitch. Master the shadow. <br><strong>100% Offline & Private.</strong></p>
-    
-    <!-- 🔥 替换这里为你的 App Store 链接 -->
-    <a href="https://apps.apple.com/app/id你的AppID" class="btn">Download on App Store</a>
 
-    <div style="margin-top: 50px; font-size: 12px; color: #444;">
-        &copy; 2025 Agent Zero Lab. <a href="./voice-shadow-privacy.html" style="color:#666;">Privacy Policy</a>
+    <div class="grid-bg"></div>
+    <div class="scanline"></div>
+
+    <div class="container">
+        <div class="logo-box">V</div>
+        
+        <h1>VOICE SHADOW</h1>
+        <div style="display:inline-block">
+            <p class="tagline typing">System Status: OPERATIONAL</p>
+        </div>
+
+        <p style="font-size: 0.9rem; line-height: 1.6; margin-bottom: 30px; color: #aaa;">
+            Analyze frequency. Master pitch. <br>
+            A 100% offline vocal training terminal.
+        </p>
+
+        <!-- 🔥 修改这里：填入你的 App Store 链接 -->
+        <a href="https://apps.apple.com/app/6756025762" class="btn-download">
+            Initialize / Download
+        </a>
+
+        <div class="dev-badge">
+            <p><span class="status-dot"></span> CONNECTION SECURE</p>
+            <p>Developed by <span class="dev-name">SichuanPanda_Dev</span></p>
+            <br>
+            <a href="./voice-shadow-privacy.html" style="color:#444; text-decoration: none;">Privacy Protocol</a>
+        </div>
     </div>
+
 </body>
 </html>
