--- a/support.html
+++ b/support.html
@@ -237,7 +237,7 @@
             <p>Codebase by <span>SichuanPanda_Dev</span></p>
             <p>
                 <a href="./voice-shadow-privacy.html">Privacy Protocol</a> | 
-                <a href="mailto:support@yourdomain.com">Signal Support</a>
+                <a href="mailto:czarul@163.com">Signal Support</a>
             </p>
         </div>
     </div>
