--- a/voice-shadow-privacy.html
+++ b/voice-shadow-privacy.html
@@ -210,7 +210,7 @@
             If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.
         </p>
         <p>
-            Email: <a href="mailto:support@chinastart.com">support@chinastart.com</a> </p>
+            Email: <a href="mailto:czarul@163.com">support@voiceshadow.com</a> </p>
     </div>
 
     <footer>
